# rust-leptos-htmx

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml
migrations/: 20230726223021_testing.down.sql  20230726223021_testing.up.sql  20230726225705_bigint-id.down.sql  20230726225705_bigint-id.up.sql
src/: main.rs
src/config/: mod.rs
src/todo/: controller.rs  db.rs  mod.rs  types.rs
