[package]
name = "rust-leptos-htmx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
dotenv = "0.15.0"
envy = "0.4.2"
poem = "1.3.57"
poem-openapi = { version = "3.0.0", features = ["swagger-ui", "openapi-explorer"] }
serde = "1.0.175"
serde_json = "1.0.103"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-native-tls", "postgres", "macros"] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
